update leaf areas with results from SAM

--- a/generation-pipeline/data/Coffee_leaf/rust_areas.json
+++ b/generation-pipeline/data/Coffee_leaf/rust_areas.json
@@ -1,296 +1,292 @@
 {
   "train_leaves": {
-    "name80": 195554,
-    "name265": 43528,
-    "name78": 102116,
-    "name244": 461599,
-    "name289": 126959,
-    "name59": 68734,
-    "name234": 239488,
-    "name58": 47142,
-    "name81": 384684,
-    "name98": 217897,
-    "name215": 680839,
-    "name31": 8342,
-    "name186": 292616,
-    "name214": 121499,
-    "name50": 252081,
-    "name260": 56026,
-    "name64": 40352,
-    "name71": 118567,
-    "name279": 337910,
-    "name218": 213350,
-    "name200": 632515,
-    "name127": 57086,
-    "name111": 112966,
-    "name310": 314126,
-    "name190": 142604,
-    "name249": 39861,
-    "name322": 20010,
-    "name8": 166854,
-    "name110": 107218,
-    "name320": 419275,
-    "name280": 439013,
-    "name70": 89460,
-    "name293": 240197,
-    "name287": 21960,
-    "name88": 198179,
-    "name101": 60840,
-    "name171": 66332,
-    "name212": 151763,
-    "name29": 25754,
-    "name91": 101996,
-    "name120": 67504,
-    "name277": 101690,
-    "name157": 85537,
-    "name250": 16204,
-    "name258": 123155,
-    "name9": 372249,
-    "name252": 174016,
-    "name226": 31679,
-    "name82": 46356,
-    "name79": 17875,
-    "name139": 134581,
-    "name134": 233087,
-    "name221": 104519,
-    "name191": 213983,
-    "name150": 239800,
-    "name180": 217546,
-    "name18": 55575,
-    "name170": 88579,
-    "name42": 30058,
-    "name324": 141048,
-    "name295": 86080,
-    "name278": 142348,
-    "name62": 95900,
-    "name317": 342458,
-    "name248": 45798,
-    "name308": 1382908,
-    "name232": 121787,
-    "name40": 33127,
-    "name151": 57330,
-    "name318": 236550,
-    "name264": 205052,
-    "name274": 60816,
-    "name65": 112078,
-    "name92": 73550,
-    "name312": 286303,
-    "name231": 150718,
-    "name243": 428361,
-    "name222": 695791,
-    "name188": 113030,
-    "name152": 119017,
-    "name15": 157018,
-    "name32": 105252,
-    "name238": 86640,
-    "name206": 249056,
-    "name89": 99243,
-    "name2": 275695,
-    "name6": 351378,
-    "name45": 163114,
-    "name211": 317499,
-    "name141": 433925,
-    "name43": 153125,
-    "name130": 237290,
-    "name124": 368387,
-    "name303": 147542,
-    "name239": 400101,
-    "name121": 156795,
-    "name223": 106604,
-    "name96": 31984,
-    "name119": 191230,
-    "name99": 183224,
-    "name41": 123777,
-    "name281": 616262,
-    "name230": 242962,
-    "name109": 165556,
-    "name315": 477972,
-    "name104": 631428,
-    "name175": 80939,
-    "name113": 112007,
-    "name199": 153155,
-    "name296": 200601,
-    "name66": 76186,
-    "name35": 82399,
-    "name205": 54936,
-    "name5": 157317,
-    "name4": 129494,
-    "name156": 1270845,
-    "name302": 314221,
-    "name44": 294628,
-    "name193": 139362,
-    "name235": 251212,
-    "name26": 80571,
-    "name103": 516021,
-    "name11": 189296,
-    "name208": 132581,
-    "name257": 223796,
-    "name67": 319582,
-    "name255": 105825,
-    "name76": 845419,
-    "name305": 128459,
-    "name174": 12844,
-    "name63": 637731,
-    "name21": 76941,
-    "name86": 129226,
-    "name137": 226551,
-    "name316": 240230,
-    "name192": 84936,
-    "name247": 49424,
-    "name177": 156272,
-    "name203": 288575,
-    "name125": 285151,
-    "name161": 227283,
-    "name135": 77606,
-    "name27": 33476,
-    "name233": 565999,
-    "name142": 308880,
-    "name307": 13500,
-    "name131": 376168,
-    "name47": 265335,
-    "name87": 169663,
-    "name290": 53814,
-    "name245": 644223,
-    "name169": 50274,
-    "name267": 32504,
-    "name184": 442588,
-    "name254": 182490,
-    "name251": 283005,
-    "name273": 106803,
-    "name194": 267469,
-    "name263": 56032,
-    "name24": 270593,
-    "name16": 945806,
-    "name189": 179089,
-    "name154": 294287,
-    "name276": 571690,
-    "name118": 73644,
-    "name77": 207947,
-    "name22": 124532,
-    "name275": 599931,
-    "name306": 78609,
-    "name60": 31562,
-    "name115": 260524,
-    "name311": 138501,
-    "name23": 359883,
-    "name183": 182870,
-    "name209": 191067,
-    "name128": 174324,
-    "name268": 122860,
-    "name132": 85090,
-    "name105": 515829,
-    "name220": 477711,
-    "name185": 231109,
-    "name300": 126741,
-    "name253": 127671,
-    "name283": 141208,
-    "name168": 361409,
-    "name227": 56671,
-    "name107": 84122,
-    "name129": 172312,
-    "name165": 893113,
-    "name179": 241600,
-    "name262": 162581,
-    "name313": 175532,
-    "name181": 115531,
-    "name304": 252365,
-    "name33": 189032,
-    "name160": 53304,
-    "name284": 211099,
-    "name217": 572350,
-    "name298": 907713,
-    "name259": 91709,
-    "name90": 52872,
-    "name291": 636130,
-    "name256": 247891,
-    "name106": 95291,
-    "name7": 151145,
-    "name236": 198448,
-    "name10": 157839,
-    "name57": 699161,
-    "name195": 307424,
-    "name126": 204773,
-    "name167": 288134,
-    "name228": 241185,
-    "name49": 291122,
-    "name153": 379937,
-    "name61": 211595,
-    "name19": 175439,
-    "name285": 65914,
-    "name301": 62709,
-    "name270": 190547,
-    "name213": 245440,
-    "name53": 98414,
-    "name75": 62378,
-    "name187": 378210,
-    "name201": 514495,
-    "name25": 40260,
-    "name197": 242397,
-    "name216": 374148,
-    "name1": 469595,
-    "name225": 532979,
-    "name138": 44124,
-    "name56": 152418,
-    "name37": 87018,
-    "name28": 56804,
-    "name219": 610043,
-    "name158": 65316,
-    "name294": 240977,
-    "name108": 66944,
-    "name321": 220459
+    "name80": 96424,
+    "name265": 23905,
+    "name78": 56451,
+    "name244": 182343,
+    "name289": 58326,
+    "name59": 38430,
+    "name234": 138916,
+    "name58": 21751,
+    "name81": 161796,
+    "name98": 123223,
+    "name215": 311522,
+    "name31": 4474,
+    "name186": 168701,
+    "name214": 64113,
+    "name50": 119203,
+    "name260": 27639,
+    "name64": 21295,
+    "name71": 54850,
+    "name279": 144150,
+    "name218": 130534,
+    "name200": 286467,
+    "name127": 29858,
+    "name111": 60717,
+    "name310": 168331,
+    "name190": 71700,
+    "name249": 21925,
+    "name322": 12658,
+    "name8": 63313,
+    "name110": 47700,
+    "name320": 186288,
+    "name280": 192704,
+    "name70": 61776,
+    "name293": 142658,
+    "name287": 11353,
+    "name88": 79662,
+    "name101": 33918,
+    "name171": 39646,
+    "name212": 82309,
+    "name29": 17557,
+    "name91": 53916,
+    "name120": 35252,
+    "name277": 50474,
+    "name157": 49266,
+    "name250": 9518,
+    "name258": 70834,
+    "name9": 216657,
+    "name252": 76064,
+    "name226": 18657,
+    "name82": 27306,
+    "name79": 9159,
+    "name139": 74155,
+    "name134": 139615,
+    "name221": 69347,
+    "name191": 108398,
+    "name150": 130713,
+    "name180": 82758,
+    "name18": 26374,
+    "name170": 47068,
+    "name42": 15502,
+    "name324": 66210,
+    "name295": 42614,
+    "name278": 74223,
+    "name62": 38365,
+    "name317": 167962,
+    "name248": 24893,
+    "name308": 672556,
+    "name232": 78665,
+    "name40": 22397,
+    "name151": 31896,
+    "name318": 135323,
+    "name264": 100906,
+    "name274": 34417,
+    "name65": 52973,
+    "name92": 37221,
+    "name312": 157947,
+    "name231": 81404,
+    "name243": 211557,
+    "name222": 435826,
+    "name188": 50747,
+    "name152": 84941,
+    "name15": 82633,
+    "name32": 51687,
+    "name238": 49741,
+    "name206": 115202,
+    "name89": 40552,
+    "name2": 146257,
+    "name6": 237322,
+    "name45": 72797,
+    "name211": 168658,
+    "name141": 188704,
+    "name43": 62615,
+    "name130": 152381,
+    "name124": 136652,
+    "name303": 84803,
+    "name239": 200434,
+    "name121": 92869,
+    "name223": 50672,
+    "name96": 18351,
+    "name119": 108293,
+    "name99": 90001,
+    "name41": 65646,
+    "name281": 273163,
+    "name230": 91694,
+    "name109": 98098,
+    "name315": 313576,
+    "name104": 322795,
+    "name175": 47243,
+    "name113": 59919,
+    "name199": 80530,
+    "name296": 109818,
+    "name66": 36351,
+    "name35": 56906,
+    "name205": 29123,
+    "name5": 97155,
+    "name4": 52574,
+    "name156": 507565,
+    "name302": 139258,
+    "name44": 124012,
+    "name193": 69151,
+    "name235": 135201,
+    "name26": 48008,
+    "name103": 253994,
+    "name11": 98108,
+    "name208": 60397,
+    "name257": 103398,
+    "name67": 142018,
+    "name255": 54209,
+    "name76": 459403,
+    "name305": 59008,
+    "name174": 6948,
+    "name63": 316488,
+    "name21": 38870,
+    "name86": 56824,
+    "name137": 106164,
+    "name316": 117996,
+    "name192": 38133,
+    "name247": 26741,
+    "name177": 76964,
+    "name203": 169822,
+    "name125": 132085,
+    "name161": 87723,
+    "name135": 43226,
+    "name27": 18110,
+    "name233": 277039,
+    "name142": 165426,
+    "name307": 7774,
+    "name131": 185790,
+    "name47": 164293,
+    "name87": 91374,
+    "name290": 29854,
+    "name245": 367096,
+    "name169": 34703,
+    "name267": 24756,
+    "name184": 251778,
+    "name254": 88180,
+    "name251": 144581,
+    "name273": 49023,
+    "name194": 125697,
+    "name263": 22841,
+    "name24": 161878,
+    "name16": 405370,
+    "name189": 86064,
+    "name154": 131983,
+    "name276": 271921,
+    "name118": 37984,
+    "name77": 106481,
+    "name22": 48094,
+    "name275": 272279,
+    "name306": 40376,
+    "name60": 17170,
+    "name115": 157300,
+    "name311": 65611,
+    "name23": 179233,
+    "name183": 91097,
+    "name209": 75105,
+    "name128": 57676,
+    "name268": 65587,
+    "name132": 46919,
+    "name105": 285273,
+    "name220": 254726,
+    "name185": 90025,
+    "name300": 52885,
+    "name253": 47627,
+    "name283": 61714,
+    "name168": 192034,
+    "name227": 30103,
+    "name107": 44355,
+    "name129": 114379,
+    "name165": 326862,
+    "name179": 109252,
+    "name262": 74355,
+    "name313": 89798,
+    "name181": 45363,
+    "name304": 98707,
+    "name33": 96138,
+    "name160": 25126,
+    "name284": 77760,
+    "name217": 251419,
+    "name298": 506553,
+    "name259": 38898,
+    "name90": 26876,
+    "name291": 324474,
+    "name256": 110681,
+    "name106": 34594,
+    "name7": 88503,
+    "name236": 100615,
+    "name10": 101470,
+    "name57": 318105,
+    "name195": 143734,
+    "name126": 94550,
+    "name167": 171794,
+    "name228": 129470,
+    "name49": 132688,
+    "name153": 193170,
+    "name61": 113418,
+    "name19": 110392,
+    "name285": 31587,
+    "name301": 28203,
+    "name270": 75377,
+    "name213": 109908,
+    "name53": 38232,
+    "name75": 27740,
+    "name187": 218362,
+    "name201": 226117,
+    "name25": 14909,
+    "name197": 120189,
+    "name216": 154701,
+    "name1": 178168,
+    "name225": 253883,
+    "name138": 23693,
+    "name56": 92225,
+    "name37": 36600,
+    "name28": 22725,
+    "name219": 272690,
+    "name158": 29813,
+    "name294": 114692,
+    "name108": 28868,
+    "name321": 98087
   },
   "test_leaves": {
-    "name20": 121987,
-    "name207": 357261,
-    "name102": 111551,
-    "name242": 18985,
-    "name123": 133865,
-    "name163": 76718,
-    "name182": 333635,
-    "name319": 266519,
-    "name198": 71532,
-    "name52": 32279,
-    "name272": 29584,
-    "name269": 64433,
-    "name68": 86054,
-    "name271": 147940,
-    "name224": 104041,
-    "name210": 213594,
-    "name38": 317037,
-    "name202": 159186,
-    "name204": 100818,
-    "name266": 28800,
-    "name309": 65668,
-    "name286": 249610,
-    "name36": 208228,
-    "name162": 196907,
-    "name196": 55832,
-    "name55": 80487,
-    "name122": 333217,
-    "name299": 101432,
-    "name237": 77834,
-    "name246": 154433,
-    "name39": 151753,
-    "name34": 85602,
-    "name288": 138560,
-    "name94": 97703,
-    "name241": 151306,
-    "name73": 215172,
-    "name14": 108841,
-    "name114": 274289,
-    "name240": 9708,
-    "name140": 159373,
-    "name173": 89691,
-    "name116": 72285,
-    "name72": 97682,
-    "name13": 1486759,
-    "name3": 224368,
-    "name164": 49032,
-    "name172": 292663
+    "name20": 65878,
+    "name207": 185385,
+    "name102": 70401,
+    "name242": 9441,
+    "name123": 49400,
+    "name163": 40137,
+    "name182": 177354,
+    "name319": 136117,
+    "name198": 35124,
+    "name52": 15531,
+    "name272": 19223,
+    "name269": 31027,
+    "name68": 52432,
+    "name271": 72126,
+    "name224": 43987,
+    "name210": 133716,
+    "name38": 165708,
+    "name202": 66717,
+    "name204": 42963,
+    "name266": 13959,
+    "name309": 37043,
+    "name286": 97198,
+    "name36": 104897,
+    "name162": 95147,
+    "name196": 28189,
+    "name55": 30273,
+    "name122": 190137,
+    "name299": 47671,
+    "name237": 53759,
+    "name246": 89586,
+    "name39": 87054,
+    "name34": 51426,
+    "name288": 64033,
+    "name94": 39330,
+    "name241": 86773,
+    "name73": 111412,
+    "name14": 55294,
+    "name114": 153052,
+    "name240": 5137,
+    "name140": 89009,
+    "name173": 42707,
+    "name116": 28759,
+    "name72": 43589,
+    "name13": 774913,
+    "name3": 120071,
+    "name164": 25957,
+    "name172": 170732
   },
-  "train_quantiles": {
-    "Q1": 86220.0,
-    "Q2": 164335.0,
-    "Q3": 284614.5
-  }
+  "train_quantiles": {}
 }
