--- a/generation-pipeline/data/Coffee_leaf/miner_areas.json
+++ b/generation-pipeline/data/Coffee_leaf/miner_areas.json
@@ -1,268 +1,264 @@
 {
   "train_leaves": {
-    "bicho_mineiro94": 1243538,
-    "bicho_mineiro209": 424580,
-    "bicho_mineiro22": 1396543,
-    "bicho_mineiro252": 1311462,
-    "bicho_mineiro39": 1079412,
-    "bicho_mineiro230": 1670834,
-    "bicho_mineiro216": 1980147,
-    "bicho_mineiro217": 1272758,
-    "bicho_mineiro104": 1620969,
-    "bicho_mineiro178": 1270314,
-    "bicho_mineiro102": 1640101,
-    "bicho_mineiro78": 1907964,
-    "bicho_mineiro171": 450036,
-    "bicho_mineiro112": 1750734,
-    "bicho_mineiro70": 624494,
-    "bicho_mineiro61": 468445,
-    "bicho_mineiro179": 735766,
-    "bicho_mineiro77": 803032,
-    "bicho_mineiro166": 855110,
-    "bicho_mineiro156": 695640,
-    "bicho_mineiro138": 2095587,
-    "bicho_mineiro63": 1655698,
-    "bicho_mineiro224": 1675375,
-    "bicho_mineiro35": 2976562,
-    "bicho_mineiro12": 1266799,
-    "bicho_mineiro195": 2360674,
-    "bicho_mineiro155": 772058,
-    "bicho_mineiro23": 636445,
-    "bicho_mineiro124": 1422850,
-    "bicho_mineiro170": 1179284,
-    "bicho_mineiro96": 1265473,
-    "bicho_mineiro129": 1651088,
-    "bicho_mineiro181": 1484798,
-    "bicho_mineiro182": 784959,
-    "bicho_mineiro163": 1185949,
-    "bicho_mineiro79": 1578734,
-    "bicho_mineiro223": 1220401,
-    "bicho_mineiro228": 1030604,
-    "bicho_mineiro185": 1039052,
-    "bicho_mineiro249": 826116,
-    "bicho_mineiro197": 859759,
-    "bicho_mineiro130": 2562207,
-    "bicho_mineiro196": 1186579,
-    "bicho_mineiro51": 951316,
-    "bicho_mineiro246": 1194613,
-    "bicho_mineiro116": 678480,
-    "bicho_mineiro67": 732846,
-    "bicho_mineiro106": 1108267,
-    "bicho_mineiro11": 1925158,
-    "bicho_mineiro219": 1665793,
-    "bicho_mineiro7": 1534796,
-    "bicho_mineiro75": 1481687,
-    "bicho_mineiro41": 807850,
-    "bicho_mineiro205": 834869,
-    "bicho_mineiro17": 2598632,
-    "bicho_mineiro144": 833178,
-    "bicho_mineiro15": 1605949,
-    "bicho_mineiro32": 1641473,
-    "bicho_mineiro20": 912793,
-    "bicho_mineiro87": 863582,
-    "bicho_mineiro193": 1567940,
-    "bicho_mineiro136": 1153138,
-    "bicho_mineiro250": 1438363,
-    "bicho_mineiro40": 2897832,
-    "bicho_mineiro183": 2610861,
-    "bicho_mineiro251": 1433633,
-    "bicho_mineiro126": 1565095,
-    "bicho_mineiro256": 2157410,
-    "bicho_mineiro202": 904126,
-    "bicho_mineiro100": 1098005,
-    "bicho_mineiro164": 1411204,
-    "bicho_mineiro238": 747815,
-    "bicho_mineiro38": 2174450,
-    "bicho_mineiro111": 1769226,
-    "bicho_mineiro241": 1570624,
-    "bicho_mineiro253": 1478512,
-    "bicho_mineiro175": 1630012,
-    "bicho_mineiro92": 1503233,
-    "bicho_mineiro232": 1663775,
-    "bicho_mineiro117": 775290,
-    "bicho_mineiro33": 579380,
-    "bicho_mineiro93": 1332242,
-    "bicho_mineiro231": 1150428,
-    "bicho_mineiro169": 895984,
-    "bicho_mineiro158": 1437264,
-    "bicho_mineiro131": 425995,
-    "bicho_mineiro143": 943307,
-    "bicho_mineiro3": 1108111,
-    "bicho_mineiro99": 649628,
-    "bicho_mineiro227": 630750,
-    "bicho_mineiro47": 1329531,
-    "bicho_mineiro242": 3390649,
-    "bicho_mineiro162": 1114613,
-    "bicho_mineiro80": 1531600,
-    "bicho_mineiro184": 2197669,
-    "bicho_mineiro18": 1960793,
-    "bicho_mineiro140": 1647566,
-    "bicho_mineiro115": 348336,
-    "bicho_mineiro159": 775041,
-    "bicho_mineiro125": 1010385,
-    "bicho_mineiro53": 1090305,
-    "bicho_mineiro122": 867330,
-    "bicho_mineiro201": 1566698,
-    "bicho_mineiro187": 933677,
-    "bicho_mineiro55": 1318454,
-    "bicho_mineiro98": 1324044,
-    "bicho_mineiro213": 1817467,
-    "bicho_mineiro45": 2185090,
-    "bicho_mineiro90": 439643,
-    "bicho_mineiro52": 1683494,
-    "bicho_mineiro186": 1984914,
-    "bicho_mineiro134": 1674317,
-    "bicho_mineiro226": 1454938,
-    "bicho_mineiro244": 414579,
-    "bicho_mineiro141": 1033801,
-    "bicho_mineiro153": 783772,
-    "bicho_mineiro74": 408518,
-    "bicho_mineiro174": 341373,
-    "bicho_mineiro239": 1000948,
-    "bicho_mineiro64": 1054513,
-    "bicho_mineiro85": 1074208,
-    "bicho_mineiro189": 2471703,
-    "bicho_mineiro132": 1154700,
-    "bicho_mineiro200": 1463102,
-    "bicho_mineiro214": 967938,
-    "bicho_mineiro237": 949720,
-    "bicho_mineiro50": 2154554,
-    "bicho_mineiro69": 1557106,
-    "bicho_mineiro48": 790305,
-    "bicho_mineiro118": 2088585,
-    "bicho_mineiro151": 836984,
-    "bicho_mineiro190": 1239880,
-    "bicho_mineiro59": 649344,
-    "bicho_mineiro34": 1836371,
-    "bicho_mineiro215": 1111950,
-    "bicho_mineiro66": 421071,
-    "bicho_mineiro248": 1406437,
-    "bicho_mineiro142": 484648,
-    "bicho_mineiro236": 2002070,
-    "bicho_mineiro139": 847181,
-    "bicho_mineiro157": 1232448,
-    "bicho_mineiro42": 1154537,
-    "bicho_mineiro127": 967571,
-    "bicho_mineiro81": 672380,
-    "bicho_mineiro2": 2389860,
-    "bicho_mineiro150": 694532,
-    "bicho_mineiro73": 482322,
-    "bicho_mineiro245": 807615,
-    "bicho_mineiro212": 541183,
-    "bicho_mineiro167": 1530093,
-    "bicho_mineiro222": 807076,
-    "bicho_mineiro10": 667022,
-    "bicho_mineiro119": 1923726,
-    "bicho_mineiro149": 416605,
-    "bicho_mineiro154": 848798,
-    "bicho_mineiro147": 1354715,
-    "bicho_mineiro103": 1895328,
-    "bicho_mineiro247": 832834,
-    "bicho_mineiro5": 1412965,
-    "bicho_mineiro101": 1522594,
-    "bicho_mineiro207": 1589060,
-    "bicho_mineiro233": 632388,
-    "bicho_mineiro255": 1584869,
-    "bicho_mineiro0": 1194437,
-    "bicho_mineiro19": 2170597,
-    "bicho_mineiro91": 1899720,
-    "bicho_mineiro68": 848676,
-    "bicho_mineiro24": 1029717,
-    "bicho_mineiro49": 1435169,
-    "bicho_mineiro114": 706840,
-    "bicho_mineiro13": 2472268,
-    "bicho_mineiro188": 1241944,
-    "bicho_mineiro44": 1174963,
-    "bicho_mineiro21": 1485369,
-    "bicho_mineiro97": 2700308,
-    "bicho_mineiro9": 2304407,
-    "bicho_mineiro86": 864067,
-    "bicho_mineiro145": 1471517,
-    "bicho_mineiro6": 794795,
-    "bicho_mineiro135": 1999648,
-    "bicho_mineiro168": 629874,
-    "bicho_mineiro235": 2008505,
-    "bicho_mineiro240": 1486829,
-    "bicho_mineiro27": 1068417,
-    "bicho_mineiro160": 1577881,
-    "bicho_mineiro58": 1234455,
-    "bicho_mineiro30": 2412071,
-    "bicho_mineiro133": 840820,
-    "bicho_mineiro208": 1689824,
-    "bicho_mineiro62": 1352085,
-    "bicho_mineiro210": 1433834,
-    "bicho_mineiro4": 1240566,
-    "bicho_mineiro31": 2618227,
-    "bicho_mineiro176": 1376758,
-    "bicho_mineiro65": 2103947,
-    "bicho_mineiro172": 462562,
-    "bicho_mineiro221": 1711376,
-    "bicho_mineiro84": 1303630,
-    "bicho_mineiro82": 2040207,
-    "bicho_mineiro26": 2202380,
-    "bicho_mineiro211": 720241,
-    "bicho_mineiro152": 847045,
-    "bicho_mineiro161": 1188945,
-    "bicho_mineiro113": 1179471,
-    "bicho_mineiro128": 468375,
-    "bicho_mineiro173": 1597712,
-    "bicho_mineiro243": 991009,
-    "bicho_mineiro220": 1359896,
-    "bicho_mineiro192": 1459771,
-    "bicho_mineiro88": 1094499,
-    "bicho_mineiro234": 1049279,
-    "bicho_mineiro257": 621802,
-    "bicho_mineiro199": 2829082,
-    "bicho_mineiro177": 929908
+    "bicho_mineiro94": 552634,
+    "bicho_mineiro209": 247002,
+    "bicho_mineiro22": 779255,
+    "bicho_mineiro252": 566201,
+    "bicho_mineiro39": 414155,
+    "bicho_mineiro230": 750600,
+    "bicho_mineiro216": 824650,
+    "bicho_mineiro217": 538491,
+    "bicho_mineiro104": 814896,
+    "bicho_mineiro178": 569831,
+    "bicho_mineiro102": 837674,
+    "bicho_mineiro78": 766181,
+    "bicho_mineiro171": 218800,
+    "bicho_mineiro112": 1063834,
+    "bicho_mineiro70": 303251,
+    "bicho_mineiro61": 191828,
+    "bicho_mineiro179": 364393,
+    "bicho_mineiro77": 329998,
+    "bicho_mineiro166": 375351,
+    "bicho_mineiro156": 367307,
+    "bicho_mineiro138": 1138717,
+    "bicho_mineiro63": 767675,
+    "bicho_mineiro224": 724053,
+    "bicho_mineiro35": 1646440,
+    "bicho_mineiro12": 625864,
+    "bicho_mineiro195": 1133523,
+    "bicho_mineiro155": 313356,
+    "bicho_mineiro23": 312698,
+    "bicho_mineiro124": 706515,
+    "bicho_mineiro170": 498628,
+    "bicho_mineiro96": 616350,
+    "bicho_mineiro129": 659261,
+    "bicho_mineiro181": 636009,
+    "bicho_mineiro182": 352748,
+    "bicho_mineiro163": 529210,
+    "bicho_mineiro79": 771733,
+    "bicho_mineiro223": 530249,
+    "bicho_mineiro228": 468816,
+    "bicho_mineiro185": 484132,
+    "bicho_mineiro249": 409084,
+    "bicho_mineiro197": 343989,
+    "bicho_mineiro130": 1281084,
+    "bicho_mineiro196": 546861,
+    "bicho_mineiro51": 326311,
+    "bicho_mineiro246": 586993,
+    "bicho_mineiro116": 341302,
+    "bicho_mineiro67": 382614,
+    "bicho_mineiro106": 465989,
+    "bicho_mineiro11": 1146543,
+    "bicho_mineiro219": 753817,
+    "bicho_mineiro7": 654748,
+    "bicho_mineiro75": 621059,
+    "bicho_mineiro41": 388152,
+    "bicho_mineiro205": 326740,
+    "bicho_mineiro17": 1350668,
+    "bicho_mineiro144": 406406,
+    "bicho_mineiro15": 782674,
+    "bicho_mineiro32": 773699,
+    "bicho_mineiro20": 347954,
+    "bicho_mineiro87": 448330,
+    "bicho_mineiro193": 742036,
+    "bicho_mineiro136": 612062,
+    "bicho_mineiro250": 582664,
+    "bicho_mineiro40": 1448727,
+    "bicho_mineiro183": 1046679,
+    "bicho_mineiro251": 678337,
+    "bicho_mineiro126": 792451,
+    "bicho_mineiro256": 1191654,
+    "bicho_mineiro202": 349701,
+    "bicho_mineiro100": 467001,
+    "bicho_mineiro164": 573609,
+    "bicho_mineiro238": 304685,
+    "bicho_mineiro38": 1157081,
+    "bicho_mineiro111": 1097062,
+    "bicho_mineiro241": 572410,
+    "bicho_mineiro253": 793647,
+    "bicho_mineiro175": 631710,
+    "bicho_mineiro92": 698609,
+    "bicho_mineiro232": 727987,
+    "bicho_mineiro117": 428283,
+    "bicho_mineiro33": 300117,
+    "bicho_mineiro93": 690879,
+    "bicho_mineiro231": 490932,
+    "bicho_mineiro169": 396261,
+    "bicho_mineiro158": 645021,
+    "bicho_mineiro131": 171353,
+    "bicho_mineiro143": 365738,
+    "bicho_mineiro3": 506083,
+    "bicho_mineiro99": 297317,
+    "bicho_mineiro227": 261642,
+    "bicho_mineiro47": 595008,
+    "bicho_mineiro242": 1404951,
+    "bicho_mineiro162": 509603,
+    "bicho_mineiro80": 731791,
+    "bicho_mineiro184": 810542,
+    "bicho_mineiro18": 884859,
+    "bicho_mineiro140": 861513,
+    "bicho_mineiro115": 203447,
+    "bicho_mineiro159": 447483,
+    "bicho_mineiro125": 528183,
+    "bicho_mineiro53": 571425,
+    "bicho_mineiro122": 370493,
+    "bicho_mineiro201": 754686,
+    "bicho_mineiro187": 445975,
+    "bicho_mineiro55": 503412,
+    "bicho_mineiro98": 733272,
+    "bicho_mineiro213": 834355,
+    "bicho_mineiro45": 1022626,
+    "bicho_mineiro90": 238934,
+    "bicho_mineiro52": 774822,
+    "bicho_mineiro186": 875308,
+    "bicho_mineiro134": 888526,
+    "bicho_mineiro226": 508296,
+    "bicho_mineiro244": 114108,
+    "bicho_mineiro141": 449029,
+    "bicho_mineiro153": 311051,
+    "bicho_mineiro74": 217298,
+    "bicho_mineiro174": 138318,
+    "bicho_mineiro239": 428551,
+    "bicho_mineiro64": 438383,
+    "bicho_mineiro85": 510418,
+    "bicho_mineiro189": 952081,
+    "bicho_mineiro132": 368121,
+    "bicho_mineiro200": 729958,
+    "bicho_mineiro214": 520754,
+    "bicho_mineiro237": 409174,
+    "bicho_mineiro50": 1194844,
+    "bicho_mineiro69": 740236,
+    "bicho_mineiro48": 428031,
+    "bicho_mineiro118": 966562,
+    "bicho_mineiro151": 315692,
+    "bicho_mineiro190": 532940,
+    "bicho_mineiro59": 327797,
+    "bicho_mineiro34": 951745,
+    "bicho_mineiro215": 498096,
+    "bicho_mineiro66": 129654,
+    "bicho_mineiro248": 619972,
+    "bicho_mineiro142": 259383,
+    "bicho_mineiro236": 887806,
+    "bicho_mineiro139": 425438,
+    "bicho_mineiro157": 559959,
+    "bicho_mineiro42": 496714,
+    "bicho_mineiro127": 428402,
+    "bicho_mineiro81": 342337,
+    "bicho_mineiro2": 1047389,
+    "bicho_mineiro150": 304061,
+    "bicho_mineiro73": 249311,
+    "bicho_mineiro245": 413053,
+    "bicho_mineiro212": 240525,
+    "bicho_mineiro167": 634591,
+    "bicho_mineiro222": 388896,
+    "bicho_mineiro10": 355472,
+    "bicho_mineiro119": 880467,
+    "bicho_mineiro149": 158100,
+    "bicho_mineiro154": 366152,
+    "bicho_mineiro147": 587052,
+    "bicho_mineiro103": 1018553,
+    "bicho_mineiro247": 338107,
+    "bicho_mineiro5": 545089,
+    "bicho_mineiro101": 719239,
+    "bicho_mineiro207": 729670,
+    "bicho_mineiro233": 235776,
+    "bicho_mineiro255": 773428,
+    "bicho_mineiro0": 622145,
+    "bicho_mineiro19": 1177203,
+    "bicho_mineiro91": 765033,
+    "bicho_mineiro68": 386641,
+    "bicho_mineiro24": 484515,
+    "bicho_mineiro49": 741012,
+    "bicho_mineiro114": 314523,
+    "bicho_mineiro13": 1251152,
+    "bicho_mineiro188": 565122,
+    "bicho_mineiro44": 604837,
+    "bicho_mineiro21": 659120,
+    "bicho_mineiro97": 1213225,
+    "bicho_mineiro9": 989732,
+    "bicho_mineiro86": 400012,
+    "bicho_mineiro145": 574517,
+    "bicho_mineiro6": 343072,
+    "bicho_mineiro135": 1019042,
+    "bicho_mineiro168": 235151,
+    "bicho_mineiro235": 949966,
+    "bicho_mineiro240": 709792,
+    "bicho_mineiro27": 435427,
+    "bicho_mineiro160": 710040,
+    "bicho_mineiro58": 579778,
+    "bicho_mineiro30": 1112741,
+    "bicho_mineiro133": 452030,
+    "bicho_mineiro208": 809553,
+    "bicho_mineiro62": 605592,
+    "bicho_mineiro210": 543050,
+    "bicho_mineiro4": 555171,
+    "bicho_mineiro31": 921523,
+    "bicho_mineiro176": 601821,
+    "bicho_mineiro65": 1073769,
+    "bicho_mineiro172": 217622,
+    "bicho_mineiro221": 820503,
+    "bicho_mineiro84": 610109,
+    "bicho_mineiro82": 830492,
+    "bicho_mineiro26": 1049485,
+    "bicho_mineiro211": 355494,
+    "bicho_mineiro152": 271604,
+    "bicho_mineiro161": 585825,
+    "bicho_mineiro113": 577712,
+    "bicho_mineiro128": 288872,
+    "bicho_mineiro173": 656968,
+    "bicho_mineiro243": 481491,
+    "bicho_mineiro220": 515906,
+    "bicho_mineiro192": 554909,
+    "bicho_mineiro88": 443913,
+    "bicho_mineiro234": 546224,
+    "bicho_mineiro257": 225049,
+    "bicho_mineiro199": 1189150,
+    "bicho_mineiro177": 355213
   },
   "test_leaves": {
-    "bicho_mineiro107": 354601,
-    "bicho_mineiro254": 516402,
-    "bicho_mineiro46": 1479185,
-    "bicho_mineiro180": 1216900,
-    "bicho_mineiro76": 1625056,
-    "bicho_mineiro89": 1350150,
-    "bicho_mineiro37": 763155,
-    "bicho_mineiro16": 1037126,
-    "bicho_mineiro165": 1181108,
-    "bicho_mineiro110": 664868,
-    "bicho_mineiro229": 668940,
-    "bicho_mineiro25": 1572221,
-    "bicho_mineiro54": 1053182,
-    "bicho_mineiro8": 1152010,
-    "bicho_mineiro218": 677294,
-    "bicho_mineiro191": 1165974,
-    "bicho_mineiro204": 1144659,
-    "bicho_mineiro137": 2011566,
-    "bicho_mineiro72": 1400204,
-    "bicho_mineiro206": 933271,
-    "bicho_mineiro60": 1859546,
-    "bicho_mineiro148": 1583384,
-    "bicho_mineiro83": 1230060,
-    "bicho_mineiro1": 2255017,
-    "bicho_mineiro95": 662054,
-    "bicho_mineiro43": 886845,
-    "bicho_mineiro123": 1598002,
-    "bicho_mineiro109": 1162609,
-    "bicho_mineiro121": 2384851,
-    "bicho_mineiro198": 1006699,
-    "bicho_mineiro36": 2103262,
-    "bicho_mineiro146": 700627,
-    "bicho_mineiro29": 2446851,
-    "bicho_mineiro71": 1753495,
-    "bicho_mineiro120": 2712508,
-    "bicho_mineiro57": 1611817,
-    "bicho_mineiro14": 2219123,
-    "bicho_mineiro105": 2090176,
-    "bicho_mineiro108": 1464888,
-    "bicho_mineiro203": 1441563,
-    "bicho_mineiro28": 1207706,
-    "bicho_mineiro56": 460451,
-    "bicho_mineiro194": 2046432
+    "bicho_mineiro107": 197176,
+    "bicho_mineiro254": 328201,
+    "bicho_mineiro46": 868253,
+    "bicho_mineiro180": 454410,
+    "bicho_mineiro76": 734217,
+    "bicho_mineiro89": 625704,
+    "bicho_mineiro37": 329965,
+    "bicho_mineiro16": 539921,
+    "bicho_mineiro165": 503948,
+    "bicho_mineiro110": 312005,
+    "bicho_mineiro229": 304451,
+    "bicho_mineiro25": 799139,
+    "bicho_mineiro54": 511065,
+    "bicho_mineiro8": 576840,
+    "bicho_mineiro218": 334861,
+    "bicho_mineiro191": 426813,
+    "bicho_mineiro204": 558202,
+    "bicho_mineiro137": 1016511,
+    "bicho_mineiro72": 663183,
+    "bicho_mineiro206": 336291,
+    "bicho_mineiro60": 824114,
+    "bicho_mineiro148": 781421,
+    "bicho_mineiro83": 685407,
+    "bicho_mineiro1": 1182990,
+    "bicho_mineiro95": 358823,
+    "bicho_mineiro43": 429578,
+    "bicho_mineiro123": 732263,
+    "bicho_mineiro109": 511075,
+    "bicho_mineiro121": 1216693,
+    "bicho_mineiro198": 469767,
+    "bicho_mineiro36": 998614,
+    "bicho_mineiro146": 362659,
+    "bicho_mineiro29": 1088419,
+    "bicho_mineiro71": 727137,
+    "bicho_mineiro120": 1698785,
+    "bicho_mineiro57": 749591,
+    "bicho_mineiro14": 1132844,
+    "bicho_mineiro105": 895337,
+    "bicho_mineiro108": 796005,
+    "bicho_mineiro203": 670641,
+    "bicho_mineiro28": 523177,
+    "bicho_mineiro56": 217543,
+    "bicho_mineiro194": 1058008
   },
-  "train_quantiles": {
-    "Q1": 847554.75,
-    "Q2": 1241255.0,
-    "Q3": 1637578.75
-  }
+  "train_quantiles": {}
 }
