--- a/generation-pipeline/data/Coffee_leaf/rust_areas.json
+++ b/generation-pipeline/data/Coffee_leaf/rust_areas.json
@@ -288,5 +288,10 @@
     "name164": 25957,
     "name172": 170732
   },
-  "train_quantiles": {}
+  "train_quantiles": {
+    "Q1": 37526.200000000004,
+    "Q2": 63953.00000000001,
+    "Q3": 100673.2,
+    "Q4": 164972.80000000002
+  }
 }
