--- a/generation-pipeline/configuration.json
+++ b/generation-pipeline/configuration.json
@@ -5,7 +5,7 @@
       {
         "name": "digit_1",
         "type": "digit",
-        "strategy": "singleton",
+        "strategy": "single_sample",
         "preprocess": "id",
         "dataset": "MNIST",
         "unstructured_input_type": "Tensor[1 x 28 x 28]"
@@ -13,7 +13,7 @@
       {
         "name": "digit_2",
         "type": "digit",
-        "strategy": "singleton",
+        "strategy": "single_sample",
         "preprocess": "id",
         "dataset": "MNIST",
         "unstructured_input_type": "Tensor[1 x 28 x 28]"
@@ -36,7 +36,7 @@
       {
         "name": "digit_1",
         "type": "digit",
-        "strategy": "singleton",
+        "strategy": "single_sample",
         "preprocess": "id",
         "dataset": "SVHN",
         "unstructured_input_type": "Tensor[3 x 32 x 32]"
@@ -44,7 +44,7 @@
       {
         "name": "digit_2",
         "type": "digit",
-        "strategy": "singleton",
+        "strategy": "single_sample",
         "preprocess": "id",
         "dataset": "SVHN",
         "unstructured_input_type": "Tensor[3 x 32 x 32]"
@@ -67,7 +67,7 @@
       {
         "name": "digit_1",
         "type": "digit",
-        "strategy": "singleton",
+        "strategy": "single_sample",
         "preprocess": "id",
         "dataset": "MNIST",
         "unstructured_input_type": "Tensor[1 x 28 x 28]"
@@ -75,7 +75,7 @@
       {
         "name": "digit_2",
         "type": "digit",
-        "strategy": "singleton",
+        "strategy": "single_sample",
         "preprocess": "id",
         "dataset": "MNIST",
         "unstructured_input_type": "Tensor[1 x 28 x 28]"
@@ -83,7 +83,7 @@
       {
         "name": "digit_3",
         "type": "digit",
-        "strategy": "singleton",
+        "strategy": "single_sample",
         "preprocess": "id",
         "dataset": "MNIST",
         "unstructured_input_type": "Tensor[1 x 28 x 28]"
@@ -106,7 +106,7 @@
       {
         "name": "digit_1",
         "type": "digit",
-        "strategy": "singleton",
+        "strategy": "single_sample",
         "preprocess": "id",
         "dataset": "SVHN",
         "unstructured_input_type": "Tensor[3 x 32 x 32]"
@@ -114,7 +114,7 @@
       {
         "name": "digit_2",
         "type": "digit",
-        "strategy": "singleton",
+        "strategy": "single_sample",
         "preprocess": "id",
         "dataset": "SVHN",
         "unstructured_input_type": "Tensor[3 x 32 x 32]"
@@ -122,7 +122,7 @@
       {
         "name": "digit_3",
         "type": "digit",
-        "strategy": "singleton",
+        "strategy": "single_sample",
         "preprocess": "id",
         "dataset": "SVHN",
         "unstructured_input_type": "Tensor[3 x 32 x 32]"
@@ -145,7 +145,7 @@
       {
         "name": "digit_1",
         "type": "digit",
-        "strategy": "singleton",
+        "strategy": "single_sample",
         "preprocess": "id",
         "dataset": "MNIST",
         "unstructured_input_type": "Tensor[1 x 28 x 28]"
@@ -153,7 +153,7 @@
       {
         "name": "digit_2",
         "type": "digit",
-        "strategy": "singleton",
+        "strategy": "single_sample",
         "preprocess": "id",
         "dataset": "MNIST",
         "unstructured_input_type": "Tensor[1 x 28 x 28]"
@@ -161,7 +161,7 @@
       {
         "name": "digit_3",
         "type": "digit",
-        "strategy": "singleton",
+        "strategy": "single_sample",
         "preprocess": "id",
         "dataset": "MNIST",
         "unstructured_input_type": "Tensor[1 x 28 x 28]"
@@ -169,7 +169,7 @@
       {
         "name": "digit_4",
         "type": "digit",
-        "strategy": "singleton",
+        "strategy": "single_sample",
         "preprocess": "id",
         "dataset": "MNIST",
         "unstructured_input_type": "Tensor[1 x 28 x 28]"
@@ -192,7 +192,7 @@
       {
         "name": "digit_1",
         "type": "digit",
-        "strategy": "singleton",
+        "strategy": "single_sample",
         "preprocess": "id",
         "dataset": "MNIST",
         "unstructured_input_type": "Tensor[1 x 28 x 28]"
@@ -200,7 +200,7 @@
       {
         "name": "digit_2",
         "type": "digit",
-        "strategy": "singleton",
+        "strategy": "single_sample",
         "preprocess": "id",
         "dataset": "MNIST",
         "unstructured_input_type": "Tensor[1 x 28 x 28]"
@@ -208,7 +208,7 @@
       {
         "name": "digit_3",
         "type": "digit",
-        "strategy": "singleton",
+        "strategy": "single_sample",
         "preprocess": "id",
         "dataset": "MNIST",
         "unstructured_input_type": "Tensor[1 x 28 x 28]"
@@ -216,7 +216,7 @@
       {
         "name": "digit_4",
         "type": "digit",
-        "strategy": "singleton",
+        "strategy": "single_sample",
         "preprocess": "id",
         "dataset": "MNIST",
         "unstructured_input_type": "Tensor[1 x 28 x 28]"
@@ -224,7 +224,7 @@
       {
         "name": "digit_5",
         "type": "digit",
-        "strategy": "singleton",
+        "strategy": "single_sample",
         "preprocess": "id",
         "dataset": "MNIST",
         "unstructured_input_type": "Tensor[1 x 28 x 28]"
@@ -247,7 +247,7 @@
       {
         "name": "digit_1",
         "type": "digit",
-        "strategy": "singleton",
+        "strategy": "single_sample",
         "preprocess": "id",
         "dataset": "MNIST",
         "unstructured_input_type": "Tensor[1 x 28 x 28]"
@@ -255,7 +255,7 @@
       {
         "name": "digit_2",
         "type": "digit",
-        "strategy": "singleton",
+        "strategy": "single_sample",
         "preprocess": "id",
         "dataset": "MNIST",
         "unstructured_input_type": "Tensor[1 x 28 x 28]"
@@ -263,7 +263,7 @@
       {
         "name": "digit_3",
         "type": "digit",
-        "strategy": "singleton",
+        "strategy": "single_sample",
         "preprocess": "id",
         "dataset": "MNIST",
         "unstructured_input_type": "Tensor[1 x 28 x 28]"
@@ -271,7 +271,7 @@
       {
         "name": "digit_4",
         "type": "digit",
-        "strategy": "singleton",
+        "strategy": "single_sample",
         "preprocess": "id",
         "dataset": "MNIST",
         "unstructured_input_type": "Tensor[1 x 28 x 28]"
@@ -279,7 +279,7 @@
       {
         "name": "digit_5",
         "type": "digit",
-        "strategy": "singleton",
+        "strategy": "single_sample",
         "preprocess": "id",
         "dataset": "MNIST",
         "unstructured_input_type": "Tensor[1 x 28 x 28]"
@@ -287,7 +287,7 @@
       {
         "name": "digit_6",
         "type": "digit",
-        "strategy": "singleton",
+        "strategy": "single_sample",
         "preprocess": "id",
         "dataset": "MNIST",
         "unstructured_input_type": "Tensor[1 x 28 x 28]"
@@ -310,7 +310,7 @@
       {
         "name": "digit_1",
         "type": "digit",
-        "strategy": "singleton",
+        "strategy": "single_sample",
         "preprocess": "id",
         "dataset": "MNIST",
         "unstructured_input_type": "Tensor[1 x 28 x 28]"
@@ -318,7 +318,7 @@
       {
         "name": "digit_2",
         "type": "digit",
-        "strategy": "singleton",
+        "strategy": "single_sample",
         "preprocess": "id",
         "dataset": "MNIST",
         "unstructured_input_type": "Tensor[1 x 28 x 28]"
@@ -341,7 +341,7 @@
       {
         "name": "digit_1",
         "type": "digit",
-        "strategy": "singleton",
+        "strategy": "single_sample",
         "preprocess": "id",
         "dataset": "MNIST",
         "unstructured_input_type": "Tensor[1 x 28 x 28]"
@@ -349,7 +349,7 @@
       {
         "name": "digit_2",
         "type": "digit",
-        "strategy": "singleton",
+        "strategy": "single_sample",
         "preprocess": "id",
         "dataset": "MNIST",
         "unstructured_input_type": "Tensor[1 x 28 x 28]"
@@ -357,7 +357,7 @@
       {
         "name": "digit_3",
         "type": "digit",
-        "strategy": "singleton",
+        "strategy": "single_sample",
         "preprocess": "id",
         "dataset": "MNIST",
         "unstructured_input_type": "Tensor[1 x 28 x 28]"
@@ -380,7 +380,7 @@
       {
         "name": "digit_1",
         "type": "digit",
-        "strategy": "singleton",
+        "strategy": "single_sample",
         "preprocess": "id",
         "dataset": "MNIST",
         "unstructured_input_type": "Tensor[1 x 28 x 28]"
@@ -388,7 +388,7 @@
       {
         "name": "digit_2",
         "type": "digit",
-        "strategy": "singleton",
+        "strategy": "single_sample",
         "preprocess": "id",
         "dataset": "MNIST",
         "unstructured_input_type": "Tensor[1 x 28 x 28]"
@@ -507,7 +507,7 @@
       {
         "name": "x",
         "type": "digit",
-        "strategy": "singleton",
+        "strategy": "single_sample",
         "preprocess": "id",
         "dataset": "MNIST",
         "unstructured_input_type": "Tensor[1 x 28 x 28]"
@@ -530,7 +530,7 @@
       {
         "name": "digit_1",
         "type": "digit",
-        "strategy": "singleton",
+        "strategy": "single_sample",
         "preprocess": "id",
         "dataset": "MNIST",
         "unstructured_input_type": "Tensor[1 x 28 x 28]"
@@ -538,7 +538,7 @@
       {
         "name": "digit_2",
         "type": "digit",
-        "strategy": "singleton",
+        "strategy": "single_sample",
         "preprocess": "id",
         "dataset": "MNIST",
         "unstructured_input_type": "Tensor[1 x 28 x 28]"
@@ -561,7 +561,7 @@
       {
         "name": "digit_1",
         "type": "digit",
-        "strategy": "singleton",
+        "strategy": "single_sample",
         "preprocess": "id",
         "dataset": "MNIST",
         "unstructured_input_type": "Tensor[1 x 28 x 28]"
@@ -569,7 +569,7 @@
       {
         "name": "digit_2",
         "type": "digit",
-        "strategy": "singleton",
+        "strategy": "single_sample",
         "preprocess": "id",
         "dataset": "MNIST",
         "unstructured_input_type": "Tensor[1 x 28 x 28]"
@@ -592,7 +592,7 @@
       {
         "name": "digit_1",
         "type": "digit",
-        "strategy": "singleton",
+        "strategy": "single_sample",
         "preprocess": "id",
         "dataset": "MNIST",
         "unstructured_input_type": "Tensor[1 x 28 x 28]"
@@ -600,7 +600,7 @@
       {
         "name": "digit_2",
         "type": "digit",
-        "strategy": "singleton",
+        "strategy": "single_sample",
         "preprocess": "id",
         "dataset": "MNIST",
         "unstructured_input_type": "Tensor[1 x 28 x 28]"
@@ -623,7 +623,7 @@
       {
         "name": "digit_1",
         "type": "digit",
-        "strategy": "singleton",
+        "strategy": "single_sample",
         "preprocess": "id",
         "dataset": "MNIST",
         "unstructured_input_type": "Tensor[1 x 28 x 28]"
@@ -631,7 +631,7 @@
       {
         "name": "digit_2",
         "type": "digit",
-        "strategy": "singleton",
+        "strategy": "single_sample",
         "preprocess": "id",
         "dataset": "MNIST",
         "unstructured_input_type": "Tensor[1 x 28 x 28]"
@@ -654,7 +654,7 @@
       {
         "name": "digit_1",
         "type": "digit",
-        "strategy": "singleton",
+        "strategy": "single_sample",
         "preprocess": "id",
         "dataset": "MNIST",
         "unstructured_input_type": "Tensor[1 x 28 x 28]"
@@ -662,7 +662,7 @@
       {
         "name": "digit_2",
         "type": "digit",
-        "strategy": "singleton",
+        "strategy": "single_sample",
         "preprocess": "id",
         "dataset": "MNIST",
         "unstructured_input_type": "Tensor[1 x 28 x 28]"
@@ -686,7 +686,7 @@
         "name": "expr",
         "type": "str",
         "max_length": 7,
-        "strategy": "singleton",
+        "strategy": "single_sample",
         "preprocess": "id",
         "dataset": "HWF",
         "unstructured_input_type": "List[Tensor[1 x 45 x 45]]"
@@ -1196,7 +1196,7 @@
       {
         "name": "n",
         "type": "digit",
-        "strategy": "singleton",
+        "strategy": "single_sample",
         "preprocess": "id",
         "dataset": "MNIST",
         "unstructured_input_type": "Tensor[1 x 28 x 28]"
@@ -1268,7 +1268,7 @@
       {
         "name": "n",
         "type": "digit",
-        "strategy": "singleton",
+        "strategy": "single_sample",
         "preprocess": "id",
         "dataset": "MNIST",
         "unstructured_input_type": "Tensor[1 x 28 x 28]"
@@ -1324,7 +1324,7 @@
       {
         "name": "n",
         "type": "digit",
-        "strategy": "singleton",
+        "strategy": "single_sample",
         "preprocess": "id",
         "dataset": "MNIST",
         "unstructured_input_type": "Tensor[1 x 28 x 28]"
@@ -1332,7 +1332,7 @@
       {
         "name": "k",
         "type": "digit",
-        "strategy": "singleton",
+        "strategy": "single_sample",
         "preprocess": "id",
         "dataset": "MNIST",
         "unstructured_input_type": "Tensor[1 x 28 x 28]"
@@ -1566,7 +1566,7 @@
       {
         "name": "x",
         "type": "char",
-        "strategy": "singleton",
+        "strategy": "single_sample",
         "preprocess": "id",
         "dataset": "EMNIST",
         "unstructured_input_type": "Tensor[1 x 28 x 28]"
@@ -1589,7 +1589,7 @@
       {
         "name": "x",
         "type": "Video[digit]",
-        "strategy": "singleton",
+        "strategy": "single_sample",
         "preprocess": "id",
         "length": 20,
         "dataset": "MNIST_VIDEO",
@@ -1638,7 +1638,7 @@
       {
         "name": "x",
         "type": "digit",
-        "strategy": "singleton",
+        "strategy": "single_sample",
         "preprocess": "id",
         "dataset": "SVHN",
         "unstructured_input_type": "List[List[Tensor[1 x 28 x 28]]]"
@@ -1818,7 +1818,7 @@
         "name": "x",
         "type": "leaf_area",
         "max_legnth": 44,
-        "strategy": "singleton",
+        "strategy": "single_sample",
         "preprocess": "preprocess_coffee",
         "dataset": "COFFEE_LEAF_RUST",
         "unstructured_input_type": "Tensor[1 x 28 x 28]"
@@ -1842,7 +1842,7 @@
         "name": "x",
         "type": "leaf_area",
         "max_length": 44,
-        "strategy": "singleton",
+        "strategy": "single_sample",
         "preprocess": "preprocess_coffee",
         "dataset": "COFFEE_LEAF_MINER",
         "unstructured_input_type": "Tensor[1 x 28 x 28]"
